2005-05-13  Marek Safar  <marek.safar@seznam.cz>
	
	* cs-parser.jay: Set readonly context based on special constructs.
	
	* expression.cs (LocalVariableReference.DoResolveBase): Improved
	readonly variable error handling.
	
	* rootcontext.cs (EmitCode): Don't verify members when error
	occurred.
	
	* statement.cs (LocalInfo): Add reaodnly context information.
	(SetReadOnlyContext, GetReadOnlyContext): New methods.

2005-05-13  Raja R Harinath  <rharinath@novell.com>

	* statement.cs (Block.Resolve): Revert change below.  Modify fix
	for #74041 to initialize 'resolved' to false only for explicit
	blocks.  Fixes #74873.

2005-05-12  Raja R Harinath  <harinath@gmail.com>

	Fix #74920.
	* typemanager.cs (unmanaged_enclosing_types): New.
	(IsUnmanagedType): Avoid infloops by using
	'unmanaged_enclosing_types' to talk with recursive invocations.

2005-05-13  Martin Baulig  <martin@ximian.com>

	* statement.cs (Block.Resolve): Make the `bool unresolved' flag an
	instance variable, not a local.  Fix #74873.
	(Block.ResolveUnreachable): Set it to true here.

2005-05-11  Duncan Mak  <duncan@novell.com>

	* cs-tokenizer.cs (get_cmd_arg): Check that 'c' is not -1 before
	continuing to process for 'arg'.
	(handle_preprocessing_directive): Check the argument of the #endif
	directive and report error CS1025 if there are any trailing
	characters.

	According to the C# spec, having even whitespace after the #endif
	directive is illegal; however, because we call arg.TrimEnd ()
	beforehand, we have the same behavior as csc, allowing whitespace
	after the directive.

	Fixes #74892.

2005-05-11  Marek Safar  <marek.safar@seznam.cz>

	Fix #74863.
	
	* class.cs (ConstructorInitializer.GetOverloadedConstructor): Removed.
	(Constructor.GetObsoleteAttribute): Implemented correctly.

2005-05-10  Martin Baulig  <martin@ximian.com>

	* support.cs (ReflectionParameters.ParameterModifier): Use
	`Parameter.Modifier.REF' if we both have `ParameterAttributes.Out'