@@ -34,7 +34,7 @@ USE_MCS_FLAGS :=
 # He may also move some to TEST_EXCLUDE_net_2_0 if some of the merges are inappropriate for GMCS.
 #
 NEW_TEST_SOURCES_common = test-336 test-369 cls-test-6 test-294 \
-	test-372 test-375 test-376 test-377 test-378 test-360
+	test-372 test-375 test-376 test-377 test-378 test-360 test-380
 
 #
 # Please do _not_ add any tests here - all new tests should go into NEW_TEST_SOURCES_common
