@@ -1,3 +1,7 @@
+2005-05-13  Raja R Harinath  <rharinath@novell.com>
+
+	* test-380.cs: New test from #74934.
+
 2005-05-12  Raja R Harinath  <harinath@gmail.com>
 
 	* test-378.cs: New test from #74920.
